[package]
name = "larva_rs"
version = "0.1.3"
authors = ["ikerUrle <ikerurlezaga@gmail.com>"]
edition = "2018"
description = "Image to SVG converter"
license = "MIT"
repository = "https://github.com/ikerUrle/larva/tree/main/larva_rs"
homepage = "https://ikerurle.github.io/larva"
categories = ["wasm","svg","image"]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
clap = "2.33.3"
image = "0.23.10"
visioncortex = "0.6.0"
photon-rs = "0.3.1"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
